--- a/.github/workflows/ossar.yml
+++ b/.github/workflows/ossar.yml
@@ -1,8 +1,8 @@
 name: OSSAR
 
 on:
-  push:
-    branches: [ "main" ]
+  # push:
+  #   branches: [ "main" ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
